# shadowghost

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_RU.md  Cargo.toml  README.md  README_RU.md  config.toml  diff  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: auto-assign.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/shadow_ghost/: MainActivity.kt
app/: pubspec.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  rust_lib.dart
lib/bridge_generated/: frb_generated.dart  frb_generated.io.dart  network.dart  storage.dart
lib/bridge_generated.dart/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/bridge_generated.dart/api/: contacts.dart  core.dart  events.dart  messages.dart  network.dart
lib/bridge_generated.dart/events/: bus.dart  bus.freezed.dart
lib/bridge_generated.dart/network/: manager.dart
lib/bridge_generated/api/: contacts.dart  core.dart  messages.dart  network.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: .gitignore  Cargo.toml  build.rs
rust/bench/: benchmarks.rs
rust/src/: cli.rs  config.rs  contact_manager.rs  core.rs  crypto.rs  events.rs  frb_generated.rs  lib.rs  lib.rs.backup  network.rs  network_discovery.rs  peer.rs  protocol.rs  storage.rs  tls_masking.rs
rust/src/api/: contacts.rs  contacts_api.rs  core.rs  core_api.rs  events.rs  events_api.rs  messages.rs  messages_api.rs  mod.rs  network.rs  network_api.rs
rust/src/chats/: flutter_api.rs  manager.rs  mod.rs  types.rs
rust/src/contacts/: error.rs  flutter_api.rs  manager.rs  mod.rs  models.rs  operations.rs  types.rs
rust/src/core/: config.rs  engine.rs  events.rs  flutter_api.rs  health.rs  lifecycle.rs  metrics.rs  mod.rs  peer.rs  profile.rs  types.rs
rust/src/crypto/: crypto.rs  flutter_api.rs  manager.rs  mod.rs  types.rs
rust/src/data/: contacts.rs  manager.rs  mod.rs  storage.rs
rust/src/events/: mod.rs
rust/src/network/: discovery.rs  flutter_api.rs  manager.rs  mod.rs  protocol.rs  tls_masking.rs  types.rs
rust/src/security/: crypto.rs  mod.rs
rust/src/storage/: flutter_api.rs  manager.rs  mod.rs  types.rs
rust/src/ui/: cli.rs  mod.rs  types.rs
rust/src/utils/: connection.rs  mod.rs  paths.rs  types.rs
rust/tests/: contact_tests.rs  crypto_tests.rs  integration_tests.rs  message_tests.rs  perfomance_comparsions_tests.rs  stress_tests.rs  unit_tests.rs  validation_tests.rs
rust/tests/common/: events.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_shadow_ghost.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_shadow_ghost.podspec
rust_builder/windows/: CMakeLists.txt
tool/: build.dart  update_version.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
