[workspace]
members = ["rust"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
debug-assertions = false
overflow-checks = false

# Workspace-wide configuration
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ShadowGhost Open Team"]
license = "ะกะก BY-NC-SA 4.0"
repository = "https://github.com/shadowghost/shadowghost"
description = "Secure P2P Messenger with Flutter UI"
keywords = ["p2p", "messenger", "encryption", "flutter"]
categories = ["network-programming", "cryptography"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"

# Crypto
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["std", "pem"] }
sha2 = "0.10"
rand = "0.9.2"
argon2 = "0.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Flutter bridge
flutter_rust_bridge = "2.11.1"

# Base64 encoding
base64 = "0.22"

# Network
reqwest = { version = "0.12.23", features = ["json"] }

tokio-test = "0.4"
tempfile = "3.21.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.4"

# Optimization settings for dependencies
[profile.release.package.flutter_rust_bridge]
opt-level = "s"

[profile.release.package.tokio]
opt-level = 3

[profile.release.package.serde]
opt-level = 3

[profile.release.package.serde_json]
opt-level = 3

# Platform-specific optimizations
[profile.release.package."*"]
opt-level = "z"

# Build settings
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.release]
consolidate-commits = true
pre-release-replacements = [
    { file = "README.md", search = "shadowghost = \"[a-z0-9\\.-]+\"", replace = "shadowghost = \"{{version}}\"" },
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
