[package]
name = "shadowghost"
version = "0.1.0"
edition = "2024"

[lib]
name = "shadowghost"
path = "src/lib.rs"

[[bin]]
name = "shadowghost"
path = "src/bin/main.rs"

[[bench]]
name = "benchmarks"
path = "bench/benchmarks.rs"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }

tokio = { version = "1.47.1", features = ["full", "time"] }
tokio-util = "0.7.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"

reqwest = { version = "0.12.23", features = ["json"] }

ring = "0.17"
curve25519-dalek = "4.0"

base64 = "0.22.1"
uuid = { version = "1.0", features = ["v4"] }

log = "0.4.27"
env_logger = "0.11.8"

rand = "0.9.2"

chrono = { version = "0.4", features = ["serde"] }

futures = "0.3.31"

# Bridging API for Frontend
# Async runtime
# Serialization
# Networking
# Crypto
# Encoding
# Logging
# Random
# Time handling
# Async utilities
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.9.2"
